covido-deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: covidodeployment
spec:
  replicas: 2
  selector:
    matchLabels:
      app: covido
      version: v1
  template:
    metadata:
      name: covidopod
      labels:
        app: covido
        version: v1
    spec:
      containers:
        - name: covidocontainer
          image: vinodck1991/covido:1.0
          ports:
            - containerPort: 8080
              name: tomcatport
              protocol: TCP
          readinessProbe:
            httpGet:
              path: /covido/actuator/health/readiness
              port: 8080
            initialDelaySeconds: 15
            timeoutSeconds: 25
            failureThreshold: 3
          livenessProbe:
            httpGet:
              path: /covido/actuator/health/liveness
              port: 8080
            initialDelaySeconds: 15
            timeoutSeconds: 25
            failureThreshold: 3
