covido-mysql-deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: covidomysqldeployment
spec:
  replicas: 1
  selector:
    matchLabels:
      dbName: mysql
      version: "8.0.32"
  template:
    metadata:
      name: covidomysqlpod
      labels:
        dbName: mysql
        version: "8.0.32"
    spec:
      containers:
        - name: mysqlcontainer
          image: mysql:8.0.32
          ports:
            - containerPort: 3306
              name: mysqlport
              protocol: TCP
          volumeMounts:
            - mountPath: /var/lib/mysql
              name: covidomysqlvolume
      volumes:
        - name: covidomysqlvolume
          persistentVolumeClaim:
            claimName: covidomysqlpvc
