covido-clusteripservice.yml
apiVersion: v1
kind: Service
metadata:
  name: covidoclusteripservice
spec:
  type: ClusterIP
  selector:
    app: covido
    version: v1
  ports:
    - port: 8080
      targetPort: 8080
