covido-mysql-service.yml
apiVersion: v1
kind: Service
metadata:
  name: covidomysqlservice
spec:
  type: ClusterIP
  selector:
    dbName: mysql
    version: "8.0.32"
  ports:
  - port: 3306
    targetPort: 3306
