covido-service.yml
apiVersion: v1
kind: Service
metadata:
  name: covidoservice
spec:
  type: NodePort
  selector:
    app: covido
    version: v1
  ports:
    - port: 8080
      targetPort: 8080
      nodePort: 31000
