covido-ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: covidoingress
spec:
  rules:
  - host: covido.org
    http:
      paths:
      - pathType: Prefix
        path: "/"
        backend:
          service:
            name: covidoclusteripservice
            port: 
              number: 8080
